Update and rename .index.html to index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </tbody>
 </table>
 <h3>my hobbies</h3>
-<a href="index.html">MY HOBBIES</a> 
+<a href="my bobbies">MY HOBBIES</a> 
 <h3>My skills</h3>
 <table cellspacing="10">
     <tr>
